Fix and text alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -61,7 +61,8 @@ form {
 }
 
 .ranges,
-.divUnSortedList {
+.divUnSortedList,
+.divSortedList {
   text-align: center;
 }
 
